fix: compatibility issues