@@ -1,7 +1,6 @@
 package snownee.minieffects.mixin.rei;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
@@ -18,9 +17,9 @@ import snownee.minieffects.IAreasGetter;
 public class DefaultPotionEffectExclusionZonesMixin {
 
 	@Inject(method = "provide", at = @At("HEAD"), cancellable = true, require = 0)
-	public void getGuiExtraAreas(EffectRenderingInventoryScreen<?> containerScreen, CallbackInfoReturnable<Collection<Rectangle>> ci) {
+	private void getGuiExtraAreas(EffectRenderingInventoryScreen<?> containerScreen, CallbackInfoReturnable<Collection<Rectangle>> ci) {
 		if (containerScreen instanceof IAreasGetter)
-			ci.setReturnValue(((IAreasGetter) containerScreen).getAreas().stream().map($ -> mapRect($)).collect(Collectors.toList()));
+			ci.setReturnValue(((IAreasGetter) containerScreen).getAreas().stream().map($ -> mapRect($)).toList());
 	}
 
 	private static Rectangle mapRect(Rect2i rect) {
